aws/elb.cfn.yaml
Parameters:
    VPCId:
        Type: AWS::EC2::VPC::Id
        Description: Choose which VPC the ALB will be deployed to
    PublicSubnetId:
        Type: AWS::EC2::Subnet::Id
        Description: Choose which subnet the ALB should be deployed to
    PrivateSubnetId:
        Type: AWS::EC2::Subnet::Id
        Description: Choose which subnet the ALB should be deployed to

Resources:
    # Certificate:
    #     Type: AWS::CertificateManager::Certificate
    #     Properties:
    #         DomainName: connect4.khai.graduate-program.journeyone.com.au
    #         ValidationMethod: DNS
    LoadBalancer:
        Type: AWS::ElasticLoadBalancingV2::LoadBalancer
        Properties:
            Subnets:
                - !Ref PublicSubnetId
                - !Ref PrivateSubnetId
            SecurityGroups:
                - !Ref LoadBalancerSecurityGroup
    HTTPLoadBalancerListener:
        Type: AWS::ElasticLoadBalancingV2::Listener
        Properties:
            LoadBalancerArn: !Ref LoadBalancer
            Port: 80
            Protocol: HTTP
            DefaultActions:
                - Type: redirect
                  RedirectConfig:
                      Protocol: HTTPS
                      Port: 443
                      StatusCode: HTTP_301

    HTTPSLoadBalancerListener:
        Type: AWS::ElasticLoadBalancingV2::Listener
        Properties:
            LoadBalancerArn: !Ref LoadBalancer
            Port: 443
            Protocol: HTTPS
            SslPolicy: ELBSecurityPolicy-2016-08
            Certificates:
                - CertificateArn: arn:aws:acm:ap-southeast-2:533267070089:certificate/20619ec7-11a1-4201-8add-ed889dc8e1ee
            DefaultActions:
                - Type: forward
                  TargetGroupArn: !Ref HTTPTargetGroup
    HTTPTargetGroup:
        Type: AWS::ElasticLoadBalancingV2::TargetGroup
        Properties:
            Name: 'http-connect4'
            VpcId: !Ref VPCId
            Port: 80
            Protocol: HTTP
            TargetType: ip
    # HTTPSTargetGroup:
    #     Type: AWS::ElasticLoadBalancingV2::TargetGroup
    #     Properties:
    #         Name: 'https-connect4'
    #         VpcId: !Ref VPCId
    #         Port: 443
    #         Protocol: HTTPS
    #         TargetType: ip
    LoadBalancerSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Allows traffic into your ELB
            VpcId: !Ref VPCId
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 443
                  ToPort: 443
                  CidrIp: 0.0.0.0/0

Outputs:
    LoadBalancer:
        Value: !Ref LoadBalancer
    LoadBalancerUrl:
        Value: !GetAtt LoadBalancer.DNSName
    LoadBalancerListener:
        Value: !Ref HTTPSLoadBalancerListener
    HTTPTargetGroup:
        Value: !GetAtt HTTPTargetGroup.TargetGroupArn
    # HTTPSTargetGroup:
    #     Value: !GetAtt HTTPSTargetGroup.TargetGroupArn
